# AWS-ETL-Workflows

./: .gitignore  README.md  pyproject.toml
cloudformation/: README.md  datapipeline_s3_redshift.yaml  eventbridge.yaml  eventbridge_default.yaml  eventbridge_with_schedule_rules.yaml  iam_roles.json  iam_roles.yaml  lambdas.yaml  lambdas_rds_and_firehose_only.yaml  rds-resource.yaml  rds.yaml  redshift.yaml  s3_glue_etl.yaml  s3_lambda_dynamodb.json  s3_lambda_dynamodb.yaml  sns_topic.yaml  sqs.yaml  twitter_kinesis_streams_firehose_etl.yaml
cloudformation/Roles/: Role_DataPipeline.yaml  Role_EMR.yaml  Role_GlueETL.yaml  Role_Kinesis.yaml  Role_LambdaImage.yaml  Role_LambdaZip.yaml  Role_StepFunctions.yaml  RolesRDS.yaml  Roles_EventBridge_and_RDS.yaml
cloudformation/datapipeline/: s3-to-rds-postgres.yaml  s3-to-s3.yaml
cloudformation/glue/: glue-dev-endpoint.yaml  glue-example2.yaml  glue-example3.yaml
data-migration/: README.md  create_eventbridge_resources.sh  import_rules_lambda_rds.sh
data-pipelines/: README.md
datasets/: .gitignore  moviedata.json  movies_input_dynamodb.json  sample_manning.csv
eventbridge-schedule-rds/: README.md  import_rules_lambda_rds.sh  teardown_resources.sh
glue_etl/: README.md  create_external_tables.sql  script.py
kinesis/: README.md  create_lambda_container_image.sh  run_stream_workflow.sh
notebooks/: glue_etl_job_flights.ipynb  lambda-firehose-test.ipynb  reading_records_from_shards.ipynb
s3_dynamodb/: README.md  ddb_io.py  lambda_function.py
s3_to_dynamodb/: README.md
step_functions/: README.md
(+87 files in other folders)
