[tool.poetry]
name = "aws_etl"
version = "0.1.0"
description = "Demo of different AWS etl capabilites for batch and streaming data"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
boto3 = "^1.21.42"
configparser = "^5.2.0"
click = "^8.1.2"
botocore = "^1.24.42"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
